--- a/tailwind.css
+++ b/tailwind.css
@@ -8,7 +8,7 @@
   /* links */
   main a,
   footer a {
-    @apply text-primary-700 dark:text-primary-400;
+    @apply text-primary-500 dark:text-primary-400;
   }
   main a:hover,
   footer a:hover {
